--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <html>
 <script src="./libs/loader.js" type="text/javascript"></script>
+<script src="./components/controller.js" type="text/javascript"></script>
 <script src="./components/main-controller.js" type="text/javascript"></script>
 <script src="./components/test/test-controller.js" type="text/javascript"></script>
 
