--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <script src="./libs/loader.js" type="text/javascript"></script>
 <script src="./components/controller.js" type="text/javascript"></script>
 <script src="./components/main-controller.js" type="text/javascript"></script>
+<script src="./services/current-location.js" type="text/javascript"></script>
 <script src="./components/test/test-controller.js" type="text/javascript"></script>
 
 <head></head>
