--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,11 @@
 <html>
 <script src="./libs/loader.js" type="text/javascript"></script>
-<script src="./components/controller.js" type="text/javascript"></script>
-<script src="./components/main-controller.js" type="text/javascript"></script>
+<script src="./libs/event-emitter.js" type="text/javascript"></script>
+<script src="./components/components-indexes.js" type="text/javascript"></script>
+<script src="./components/component.js" type="text/javascript"></script>
 <script src="./services/current-location.js" type="text/javascript"></script>
-<script src="./components/test/test-controller.js" type="text/javascript"></script>
+<script src="./components/test/test-component.js" type="text/javascript"></script>
+<script src="./system.js" type="text/javascript"></script>
 
 <head></head>
 
